[metadata]
name = secretkv
version = 0.0.0
description = Store encrypted and versioned key/value pairs
long_description = file: README.md
long_description_content_type = text/markdown
author = Alan Campagnaro
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    cryptography>=37
python_requires = >=3.8

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    secretkv=secretkv.main:main
    skv=secretkv.main:main

[options.extras_require]
dev =
    black
    flake8
    mypy
    pytest
    pytest-cov

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 120
